--- a/app/index.html
+++ b/app/index.html
@@ -141,62 +141,36 @@
             </div><!-- /.container-fluid -->
         </nav>
         <div class="header" style="background-image: url('/img/14.jpg')">
-            <p>ГОРОСКОП</p>
+            <h1>ГОРОСКОП</h1>
         </div>
 	</div>
-	<main class="col-md-8">
+    <section class="container">
+        <div class="row">
+            <main class="col-md-8">
+                <article>
+                    <header>
+                        <h1>Очень увлекательная статья</h1>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo quisquam, soluta sunt, aliquam voluptatem voluptates! Deserunt repudiandae aperiam pariatur sit harum at a, quo, est neque. Adipisci beatae eaque unde? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam consectetur doloremque error eveniet libero quasi quisquam repellendus reprehenderit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequatur ea eum facere inventore nobis omnis perferendis quae quibusdam!</p>
+                </article>
+            </main>
+            <div class="sidebar col-md-4">
+                <aside>
+                    <h1>Widget title</h1>
+                    ...
+                </aside>
+                <aside>
+                    <h1>Последние записи</h1>
+                    ...
+                </aside>
+                <aside>
+                    <h1>Популярные комментарии</h1>
+                    ...
+                </aside>
+            </div>
+        </div>
+    </section>
 
-		<!-- Статья -->
-		<article>
-
-			<!-- Шапка статьи если в шапке у нас больше чем заголовок -->
-			<header>
-
-				<!-- Заголовок статьи -->
-				<h1>Article title</h1>
-
-				<!-- Дата публикации статьи  -->
-
-			</header>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo quisquam, soluta sunt, aliquam voluptatem voluptates! Deserunt repudiandae aperiam pariatur sit harum at a, quo, est neque. Adipisci beatae eaque unde?</p>
-
-			<!-- Подзаголовок страницы -->
-			<h2>Article sub-title</h2>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo quisquam, soluta sunt, aliquam voluptatem voluptates! Deserunt repudiandae aperiam pariatur sit harum at a, quo, est neque. Adipisci beatae eaque unde?</p>
-
-			<footer>
-				<a href="#">Читать далее</a>
-				<a href="#">Комментарии</a>
-			</footer>
-
-		</article>
-
-	</main>
-	<!-- Сайдбар -->
-	<div class="sidebar col-lg-4">
-
-		<!-- Виджет в сайдбаре -->
-		<aside>
-			<h1>Widget title</h1>
-			...
-		</aside>
-
-		<!-- Виджет в сайдбаре -->
-		<aside>
-			<h1>Последние записи</h1>
-			...
-		</aside>
-
-
-		<!-- Виджет в сайдбаре -->
-		<aside>
-			<h1>Популярные комментарии</h1>
-			...
-		</aside>
-
-	</div>
 	<br>
 	<br>
 	<br>
